# ml_leaderboard_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
prediction_leaderboard/: __init__.py  config.yaml  leaderboard.py  submit.py
prediction_leaderboard/data/: private_gt.csv  public_gt.csv
prediction_leaderboard/evaluator/: metrics.py
prediction_leaderboard/tests/: test_cli_commands.py  test_leaderboard.py  test_metrics.py  test_submit.py
src/: config.ini  config.yaml  leaderboard.py  submit.py  web.py  webapp.py
src/data/: sample_pred.csv
src/evaluator/: metrics.py
src/tests/: test_cli_commands.py  test_leaderboard.py  test_metrics.py  test_submit.py
